--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
     "gus"
   ],
   "license": "MIT",
-  "homepage": "",
+  "homepage": "https://github.com/gus-rc",
   "private": true,
   "ignore": [
     "**/.*",
